--- a/mobile.html
+++ b/mobile.html
@@ -35,7 +35,7 @@
           </div>
           <div class="price">7$/Kg</div>
         </div>
-        <button>Add to cart</button>
+        <button class="cardButton">Add to cart</button>
       </article>
       <article class="card">
         <img src="/assets/imgs/honey.jpg" />
@@ -47,7 +47,7 @@
           <div class="price">7$/Kg</div>
         </div>
 
-        <button>Add to cart</button>
+        <button class="cardButton">Add to cart</button>
       </article>
       <article class="card">
         <img src="/assets/imgs/honey.jpg" />
@@ -59,7 +59,7 @@
           <div class="price">7$/Kg</div>
         </div>
 
-        <button>Add to cart</button>
+        <button class="cardButton">Add to cart</button>
       </article>
       <article class="card">
         <img src="/assets/imgs/honey.jpg" />
@@ -71,7 +71,7 @@
           <div class="price">7$/Kg</div>
         </div>
 
-        <button>Add to cart</button>
+        <button class="cardButton">Add to cart</button>
       </article>
       <h1>Latest News</h1>
       <article>
